--- a/ceosofts/composer.json
+++ b/ceosofts/composer.json
@@ -7,11 +7,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "barryvdh/laravel-dompdf": "^3.1",
-        "laravel/framework": "^11.31",
+        "barryvdh/laravel-dompdf": "^3.0",
+        "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6",
-        "spatie/laravel-permission": "^6.12"
+        "league/flysystem": "^3.29.1",
+        "league/flysystem-local": "^3.29.0",
+        "mpdf/mpdf": "^8.2",
+        "spatie/laravel-permission": "^6.16"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
